--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@ input[type='text'] {
 
 .card {
   cursor: pointer;
+  border-radius: 25%;
   background-color: transparent;
   height: 300px;
   perspective: 1000px;
